package Questao01Modal;

public interface Modal {
    double calcularTarifa(double valorBase);
}