package Questao01Modal;

public abstract class ModalFactory {
    public abstract Modal criarModal();
}